[package]
authors = [
  "Yuekai Jia <equation618@gmail.com>",
  "ChengXiang Qi <kuangjux@outlook.com>",
]
description = "ArceOS device drivers"
documentation = "https://arceos-org.github.io/arceos/axdriver/index.html"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "axdriver"
repository = "https://github.com/arceos-org/arceos/tree/main/modules/axdriver"
version.workspace = true

[features]
block = ["axdriver_block"]
bus-mmio = []
bus-pci = ["dep:axdriver_pci", "dep:axhal", "dep:axconfig"]
display = ["axdriver_display"]
input = ["axdriver_input"]
net = ["axdriver_net"]
dyn = ["dep:rdrive", "dep:axhal", "dep:arm-gic-driver", "arm-gic-driver?/rdif"]

# Enabled by features `virtio-*`
virtio = ["axdriver_virtio", "dep:axalloc", "dep:axhal", "dep:axconfig"]

# various types of drivers
ahci-gpt = [
  "block",
  "axdriver_block",
  "axdriver_block/gpt",
  "dep:axhal",
  "dep:ahci_driver",
  "dep:printf-compat",
]
bcm2835-sdhci = ["block", "axdriver_block/bcm2835-sdhci"]
fxmac = ["net", "axdriver_net/fxmac", "dep:axalloc", "dep:axhal", "dep:axdma"]
ixgbe = ["net", "axdriver_net/ixgbe", "dep:axalloc", "dep:axhal", "dep:axdma"]
ramdisk = ["block", "axdriver_block/ramdisk", "dep:axhal", "dep:axconfig"]
sdmmc-gpt = ["block", "axdriver_block/sdmmc", "axdriver_block/gpt", "dep:axhal"]
virtio-blk = ["block", "virtio", "axdriver_virtio/block"]
virtio-gpu = ["display", "virtio", "axdriver_virtio/gpu"]
virtio-input = ["input", "virtio", "axdriver_virtio/input"]
virtio-net = ["net", "virtio", "axdriver_virtio/net"]
# more devices example: e1000 = ["net", "axdriver_net/e1000"]

[dependencies]
axalloc = {workspace = true, optional = true}
axconfig = {workspace = true, optional = true}
axdma = {workspace = true, optional = true}
axhal = {workspace = true, optional = true}

# axdriver_base = { git = "https://github.com/Starry-OS/axdriver_crates.git", rev = "6ddb55b" }
# axdriver_block = { git = "https://github.com/Starry-OS/axdriver_crates.git", rev = "6ddb55b", optional = true }
# axdriver_display = { git = "https://github.com/Starry-OS/axdriver_crates.git", rev = "6ddb55b", optional = true }
# axdriver_input = { git = "https://github.com/Starry-OS/axdriver_crates.git", rev = "6ddb55b", optional = true }
# axdriver_net = { git = "https://github.com/Starry-OS/axdriver_crates.git", rev = "6ddb55b", optional = true }
# axdriver_pci = { git = "https://github.com/Starry-OS/axdriver_crates.git", rev = "6ddb55b", optional = true }
# axdriver_virtio = { git = "https://github.com/Starry-OS/axdriver_crates.git", rev = "6ddb55b", optional = true }

axdriver_base = {path = "../../../crates/axdriver_crates/axdriver_base"}
axdriver_block = {path = "../../../crates/axdriver_crates/axdriver_block", optional = true}
axdriver_display = {path = "../../../crates/axdriver_crates/axdriver_display", optional = true}
axdriver_input = {path = "../../../crates/axdriver_crates/axdriver_input", optional = true}
axdriver_net = {path = "../../../crates/axdriver_crates/axdriver_net", optional = true}
axdriver_pci = {path = "../../../crates/axdriver_crates/axdriver_pci", optional = true}
axdriver_virtio = {path = "../../../crates/axdriver_crates/axdriver_virtio", optional = true}
ahci_driver = {git = "https://github.com/Starry-OS/ahci_driver.git", rev = "beaa9c8", optional = true}
axerrno = {workspace = true}
cfg-if = {workspace = true}
crate_interface = {workspace = true}
lazyinit = "0.2"
log = {workspace = true}
memory_addr = "0.4"
printf-compat = {git = "https://github.com/lights0123/printf-compat.git", rev = "5f5c9cc", default-features = false, optional = true}
rdrive = {version = "0.16", optional = true}

[target.'cfg(target_arch = "aarch64")'.dependencies]
arm-gic-driver = { version = "0.15", optional = true }